--- a/index.html
+++ b/index.html
@@ -25,4 +25,17 @@
         }
     </style>
 </head>
+    <body>
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+    <main>
+        <h2>About Me</h2>
+        <p>Hello! This is a simple HTML page.</p>
+        <p>HTML stands for HyperText Markup Language. It is used to create webpages.</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Website</p>
+    </footer>
+</body>
 </html>
